Fix popup text color in dark mode

--- a/css/popup.css
+++ b/css/popup.css
@@ -12,12 +12,6 @@ body {
   display: block;
   position: relative;
   padding: 0.2rem 0.4rem;
-  color: #000;
-  text-decoration: none;
-}
-
-.items__item-link:hover {
-  color: hsl(200, 70%, 50%);
 }
 
 .items__item + .items__item {
